--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-dictionary_word2vec/__pycache__/
-dictionary/__pycache__/
+dictionary_word2vec/__pycache__
+dictionary/__pycache__
 dictionary/migrations/__pycache__
+dictionary/models/GoogleNews-vectors*
